<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dymek</string>
    <string name="sensors_settings">Sensors settings</string>
    <string name="name">Name</string>
    <string name="add_another_sensor">Add another sensor</string>
    <string name="sensor_name">Sensor name</string>
    <string name="min_temperature_value">Min temperature value</string>
    <string name="max_temperature_value">Max temperature value</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="edit">edit</string>
    <string name="thermometer_profiles">Thermometer Profiles</string>
    <string name="thermometer_service_label">Thermometer service</string>
    <string name="thermometer_service_description">Dymek\'s service for delivering thermometer information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
