<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.blumek.dymek.application.viewModel.PersistenceThermometerProfileViewModel" />

        <variable
            name="adapter"
            type="com.blumek.dymek.application.adapter.SensorsSettingsAdapter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".application.fragment.CreationThermometerProfileFragment">

        <TextView
            android:labelFor="@id/profile_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/profile_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@={viewModel.thermometerProfile.name}"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_settings"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sensors_settings_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:adapter="@{adapter}"/>

                <Button
                    android:id="@+id/add_another_sensor_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/add_another_sensor"
                    android:onClick="@{() -> viewModel.onAddSensorSettingsTemplate()}"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/save_thermometer_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/save"
                    android:onClick="@{viewModel::onPersistClick}"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>